[gd_scene load_steps=2 format=3 uid="uid://psqafhao30uw"]

[ext_resource type="Script" uid="uid://c286ob480fdfd" path="res://scenes/ui_components/save_slot/save_slot.gd" id="1_hq7m3"]

[node name="SaveSlot" type="Control"]
custom_minimum_size = Vector2(190, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_hq7m3")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(190, 0)
layout_mode = 1
offset_right = 126.0
offset_bottom = 131.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="LabelTitle" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Save Slot #"

[node name="LabelUserName" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Username: name"

[node name="LabelLevel" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Repair Level: 100.000000"

[node name="LabelCoins" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Coins: 100000"

[node name="LabelTimeStamp" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Save Date: Date"

[node name="LabelEmpty" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Empty"

[node name="ButtonNewGame" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="ButtonImport" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Import Save"

[node name="ButtonLoad" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Load Game"

[node name="ButtonExport" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Export Save"

[node name="ButtonDelete" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Delete Save"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonNewGame" to="." method="_on_button_new_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonImport" to="." method="_on_button_import_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonExport" to="." method="_on_button_export_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonDelete" to="." method="_on_button_delete_pressed"]
